WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253079
[contain-intrinsic-size] wpt failures related to multi-columns
https://bugs.webkit.org/show_bug.cgi?id=253079
Summary
[contain-intrinsic-size] wpt failures related to multi-columns
cathiechen
Reported
2023-02-28 07:36:05 PST
There are some failures related to multi-columns in auto-007.html and contain-intrinsic-size-031.html
Attachments
Add attachment
proposed patch, testcase, etc.
cathiechen
Comment 1
2023-02-28 07:53:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10799
EWS
Comment 2
2023-03-01 11:41:51 PST
Committed
261016@main
(8530f5f0f030): <
https://commits.webkit.org/261016@main
> Reviewed commits have been landed. Closing PR #10799 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-01 11:42:19 PST
<
rdar://problem/106097825
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug