[contain-intrinsic-size] wpt failures related to multi-columns https://bugs.webkit.org/show_bug.cgi?id=253079

Reviewed by Oriol Brufau.

In adjustIntrinsicLogicalWidthsForColumns, it might adjust min/maxLogicalWidth. But if the widths are from
contain-intrinsic-size, they should not be adjusted.

* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-007-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/contain-intrinsic-size-031-expected.txt:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeIntrinsicLogicalWidths const):

Canonical link: https://commits.webkit.org/261016@main